--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "Dokončete zvuky",
     "CL_DV_OV_24_finish_sounds_content": "Vyberte interval opakování zvuku.",
     "CL_DV_OV_search_recipes": "Hledat recepty",
-    "CL_CF_CM_search_history": "Historie vyhledávání"
+    "CL_CF_CM_search_history": "Historie vyhledávání",
+    "CL_DV_OV_24_egg_timer_pop_content": "Vyberte opakování a dobu trvání zvuku, který uslyšíte, když vyprší časovač vajec. \n\n Zvuk časovače vajec je slyšitelný...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Zvolte interval opakování zvuku ukončení po dokončení programu vaření. \n\n Konečný zvuk je slyšitelný...",
+    "CL_DV_OV_24_night_mode_pop_content": "Vyberte, kdy se má spustit noční režim.",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Vyberte, kdy se má spustit režim Sabbath.",
+    "input_email_address": "Zadejte e-mailovou adresu",
+    "CL_DV_OV_24_cavity_lights": "Světla do dutin",
+    "CL_DV_OV_24_sabbath_reminder": "Připomenutí soboty",
+    "CL_DV_OV_24_start_sabbath": "Začněte sabat",
+    "CL_DV_OV_24_end_sabbath": "Konec sabatu",
+    "CL_DV_OV_24_show_backgrounds": "Zobrazit pozadí",
+    "CL_DV_OV_24_brightness_setting_content": "Jas displeje trouby a tlačítek lze změnit podle vašich preferencí. ",
+    "CL_DV_OV_24_close_user_detected": "Bylo zjištěno uzavření uživatele"
 }
