--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "Klänge beenden",
     "CL_DV_OV_24_finish_sounds_content": "Wählen Sie das Intervall für die Wiederholung des Zieltons.",
     "CL_DV_OV_search_recipes": "Rezepte suchen",
-    "CL_CF_CM_search_history": "Suchverlauf"
+    "CL_CF_CM_search_history": "Suchverlauf",
+    "CL_DV_OV_24_egg_timer_pop_content": "Wählen Sie die Wiederholung und Dauer des Tons aus, der ertönt, wenn eine Eieruhr abläuft. \n\n Der Ton der Eieruhr ist hörbar...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Wählen Sie das Intervall der Wiederholung des Zieltons, wenn ein Kochprogramm beendet ist. \n\n Das Zielgeräusch ist hörbar...",
+    "CL_DV_OV_24_night_mode_pop_content": "Wählen Sie aus, wann der Nachtmodus starten soll.",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Wählen Sie aus, wann der Sabbatmodus starten soll.",
+    "input_email_address": "Geben Sie die E-Mail-Adresse ein",
+    "CL_DV_OV_24_cavity_lights": "Hohlraumleuchten",
+    "CL_DV_OV_24_sabbath_reminder": "Sabbat-Erinnerung",
+    "CL_DV_OV_24_start_sabbath": "Beginne den Sabbat",
+    "CL_DV_OV_24_end_sabbath": "Ende des Sabbats",
+    "CL_DV_OV_24_show_backgrounds": "Hintergründe anzeigen",
+    "CL_DV_OV_24_brightness_setting_content": "Die Helligkeit des Ofendisplays und der Tasten kann nach Ihren Wünschen geändert werden. ",
+    "CL_DV_OV_24_close_user_detected": "Naher Benutzer erkannt"
 }
