--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "समाप्त ध्वनि",
     "CL_DV_OV_24_finish_sounds_content": "अंतिम ध्वनि पुनरावृत्ति का अंतराल चुनें.",
     "CL_DV_OV_search_recipes": "व्यंजन खोजें",
-    "CL_CF_CM_search_history": "खोज इतिहास"
+    "CL_CF_CM_search_history": "खोज इतिहास",
+    "CL_DV_OV_24_egg_timer_pop_content": "अंडे का टाइमर समाप्त होने पर आपको सुनाई देने वाली ध्वनि की पुनरावृत्ति और अवधि का चयन करें। \n\n अंडे की टाइमर ध्वनि सुनाई दे रही है...",
+    "CL_DV_OV_24_finish_sound_pop_content": "खाना पकाने का कार्यक्रम समाप्त होने पर अंतिम ध्वनि पुनरावृत्ति का अंतराल चुनें। \n\n समापन ध्वनि सुनाई दे रही है...",
+    "CL_DV_OV_24_night_mode_pop_content": "चुनें कि रात्रि मोड कब शुरू होना चाहिए.",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "चुनें कि सब्बाथ मोड कब शुरू होना चाहिए.",
+    "input_email_address": "ईमेल पता दर्ज करें",
+    "CL_DV_OV_24_cavity_lights": "गुहा रोशनी",
+    "CL_DV_OV_24_sabbath_reminder": "सब्बाथ अनुस्मारक",
+    "CL_DV_OV_24_start_sabbath": "सब्बाथ प्रारंभ करें",
+    "CL_DV_OV_24_end_sabbath": "सब्बाथ का अंत",
+    "CL_DV_OV_24_show_backgrounds": "पृष्ठभूमि दिखाएं",
+    "CL_DV_OV_24_brightness_setting_content": "ओवन डिस्प्ले और कुंजियों की चमक को आपकी पसंद के अनुसार बदला जा सकता है। ",
+    "CL_DV_OV_24_close_user_detected": "बंद उपयोगकर्ता का पता चला"
 }
