--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "Hangok befejezése",
     "CL_DV_OV_24_finish_sounds_content": "Válassza ki a befejező hang ismétlésének intervallumát.",
     "CL_DV_OV_search_recipes": "Receptek keresése",
-    "CL_CF_CM_search_history": "Keresési előzmények"
+    "CL_CF_CM_search_history": "Keresési előzmények",
+    "CL_DV_OV_24_egg_timer_pop_content": "Válassza ki a tojásidőzítő lejártakor hallható hang ismétlődését és időtartamát. \n\n A tojásidőzítő hangja hallható...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Válassza ki a befejező hang ismétlésének intervallumát a főzési program végén. \n\n A befejező hang hallható...",
+    "CL_DV_OV_24_night_mode_pop_content": "Válassza ki, hogy mikor induljon el az Éjszakai mód.",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Válassza ki, hogy mikor induljon el a szombat mód.",
+    "input_email_address": "Írja be az e-mail címet",
+    "CL_DV_OV_24_cavity_lights": "Üreges lámpák",
+    "CL_DV_OV_24_sabbath_reminder": "Emlékeztető szombatra",
+    "CL_DV_OV_24_start_sabbath": "Indítsa el a szombatot",
+    "CL_DV_OV_24_end_sabbath": "Vége a szombatnak",
+    "CL_DV_OV_24_show_backgrounds": "Hátterek megjelenítése",
+    "CL_DV_OV_24_brightness_setting_content": "A sütő kijelzőjének és gombjainak fényereje tetszés szerint módosítható. ",
+    "CL_DV_OV_24_close_user_detected": "Felhasználó bezárása észlelve"
 }
