--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "Finisci i suoni",
     "CL_DV_OV_24_finish_sounds_content": "Scegli l'intervallo di ripetizione del suono finale.",
     "CL_DV_OV_search_recipes": "Cerca ricette",
-    "CL_CF_CM_search_history": "Cronologia delle ricerche"
+    "CL_CF_CM_search_history": "Cronologia delle ricerche",
+    "CL_DV_OV_24_egg_timer_pop_content": "Seleziona la ripetizione e la durata del suono che senti quando scade il timer della cucina. \n\n Il suono del timer per le uova è udibile...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Selezionare l'intervallo di ripetizione del suono di fine cottura al termine di un programma. \n\n Il suono finale è udibile...",
+    "CL_DV_OV_24_night_mode_pop_content": "Seleziona quando deve avviarsi la modalità Notte.",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Seleziona quando deve iniziare la modalità Sabbath.",
+    "input_email_address": "Inserisci l'indirizzo email",
+    "CL_DV_OV_24_cavity_lights": "Luci per cavità",
+    "CL_DV_OV_24_sabbath_reminder": "Promemoria per il sabato",
+    "CL_DV_OV_24_start_sabbath": "Inizia il Sabbath",
+    "CL_DV_OV_24_end_sabbath": "Fine del Sabbath",
+    "CL_DV_OV_24_show_backgrounds": "Mostra sfondi",
+    "CL_DV_OV_24_brightness_setting_content": "È possibile modificare la luminosità del display e dei tasti del forno in base alle proprie preferenze. ",
+    "CL_DV_OV_24_close_user_detected": "Utente vicino rilevato"
 }
