--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "Sons de acabamento",
     "CL_DV_OV_24_finish_sounds_content": "Escolha o intervalo de repetição do som final.",
     "CL_DV_OV_search_recipes": "Pesquisar Receitas",
-    "CL_CF_CM_search_history": "Histórico de pesquisa"
+    "CL_CF_CM_search_history": "Histórico de pesquisa",
+    "CL_DV_OV_24_egg_timer_pop_content": "Selecione a repetição e a duração do som que você ouve quando o cronômetro expira. \n\n O som do cronômetro é audível...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Selecione o intervalo de repetição do som de término quando um programa de cozimento estiver concluído. \n\n O som final é audível...",
+    "CL_DV_OV_24_night_mode_pop_content": "Selecione quando o modo noturno deve iniciar.",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Selecione quando o modo Sabbath deve iniciar.",
+    "input_email_address": "Insira o endereço de e-mail",
+    "CL_DV_OV_24_cavity_lights": "Luzes de cavidade",
+    "CL_DV_OV_24_sabbath_reminder": "Lembrete de sábado",
+    "CL_DV_OV_24_start_sabbath": "Comece o sábado",
+    "CL_DV_OV_24_end_sabbath": "Fim do Sábado",
+    "CL_DV_OV_24_show_backgrounds": "Mostrar fundos",
+    "CL_DV_OV_24_brightness_setting_content": "O brilho do visor e das teclas do forno pode ser alterado de acordo com sua preferência. ",
+    "CL_DV_OV_24_close_user_detected": "Usuário próximo detectado"
 }
