--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "Звуки завершения",
     "CL_DV_OV_24_finish_sounds_content": "Выберите интервал повторения финального звука.",
     "CL_DV_OV_search_recipes": "Поиск рецептов",
-    "CL_CF_CM_search_history": "История поиска"
+    "CL_CF_CM_search_history": "История поиска",
+    "CL_DV_OV_24_egg_timer_pop_content": "Выберите повторение и продолжительность звука, который вы услышите по истечении времени на таймере варки яиц. \n\n Слышен звук таймера для варки яиц...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Выберите интервал повторения звукового сигнала по завершении программы приготовления. \n\n Звук финиша слышен...",
+    "CL_DV_OV_24_night_mode_pop_content": "Выберите, когда должен включаться ночной режим.",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Выберите, когда должен запускаться режим «Шаббат».",
+    "input_email_address": "Введите адрес электронной почты",
+    "CL_DV_OV_24_cavity_lights": "Светильники для полостей",
+    "CL_DV_OV_24_sabbath_reminder": "Напоминание о субботе",
+    "CL_DV_OV_24_start_sabbath": "Начать субботу",
+    "CL_DV_OV_24_end_sabbath": "Конец субботы",
+    "CL_DV_OV_24_show_backgrounds": "Показать фоны",
+    "CL_DV_OV_24_brightness_setting_content": "Яркость дисплея и кнопок духовки можно изменить по вашему желанию. ",
+    "CL_DV_OV_24_close_user_detected": "Обнаружен близкий пользователь"
 }
