--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "Avsluta ljud",
     "CL_DV_OV_24_finish_sounds_content": "Välj intervall för upprepning av slutljud.",
     "CL_DV_OV_search_recipes": "Sök recept",
-    "CL_CF_CM_search_history": "Sökhistorik"
+    "CL_CF_CM_search_history": "Sökhistorik",
+    "CL_DV_OV_24_egg_timer_pop_content": "Välj upprepning och varaktighet för ljudet du hör när en äggklocka går ut. \n\n Ljudet för äggklocka hörs...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Välj intervall för slutljudupprepning när ett tillagningsprogram är klart. \n\n Slutljudet hörs...",
+    "CL_DV_OV_24_night_mode_pop_content": "Välj när nattläget ska starta.",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Välj när sabbatsläget ska starta.",
+    "input_email_address": "Ange e-postadressen",
+    "CL_DV_OV_24_cavity_lights": "Kavitetsljus",
+    "CL_DV_OV_24_sabbath_reminder": "Sabbatspåminnelse",
+    "CL_DV_OV_24_start_sabbath": "Börja sabbaten",
+    "CL_DV_OV_24_end_sabbath": "Avsluta sabbaten",
+    "CL_DV_OV_24_show_backgrounds": "Visa bakgrunder",
+    "CL_DV_OV_24_brightness_setting_content": "Ljusstyrkan på ugnsdisplayen och knapparna kan ändras efter dina önskemål. ",
+    "CL_DV_OV_24_close_user_detected": "Nära användare upptäcktes"
 }
