--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "Âm thanh kết thúc",
     "CL_DV_OV_24_finish_sounds_content": "Chọn khoảng thời gian lặp lại âm thanh kết thúc.",
     "CL_DV_OV_search_recipes": "Tìm kiếm công thức nấu ăn",
-    "CL_CF_CM_search_history": "Lịch sử tìm kiếm"
+    "CL_CF_CM_search_history": "Lịch sử tìm kiếm",
+    "CL_DV_OV_24_egg_timer_pop_content": "Chọn thời gian lặp lại và thời lượng của âm thanh bạn nghe thấy khi hết giờ. \n\n Âm thanh của bộ đếm thời gian đánh trứng có thể nghe thấy được...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Chọn khoảng thời gian lặp lại âm thanh kết thúc khi chương trình nấu ăn kết thúc. \n\n Âm thanh kết thúc có thể nghe thấy được...",
+    "CL_DV_OV_24_night_mode_pop_content": "Chọn thời điểm bắt đầu chế độ Ban đêm.",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Chọn thời điểm bắt đầu chế độ Sabbath.",
+    "input_email_address": "Nhập địa chỉ email",
+    "CL_DV_OV_24_cavity_lights": "Đèn khoang",
+    "CL_DV_OV_24_sabbath_reminder": "nhắc nhở ngày Sa-bát",
+    "CL_DV_OV_24_start_sabbath": "Bắt đầu ngày Sa-bát",
+    "CL_DV_OV_24_end_sabbath": "Kết thúc ngày Sa-bát",
+    "CL_DV_OV_24_show_backgrounds": "Hiển thị hình nền",
+    "CL_DV_OV_24_brightness_setting_content": "Độ sáng của màn hình hiển thị và các phím bấm của lò nướng có thể thay đổi tùy theo sở thích của bạn. ",
+    "CL_DV_OV_24_close_user_detected": "Đóng người dùng phát hiện"
 }
