--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "完成聲音",
     "CL_DV_OV_24_finish_sounds_content": "選擇完成聲音重複的間隔。",
     "CL_DV_OV_search_recipes": "搜尋食譜",
-    "CL_CF_CM_search_history": "搜尋紀錄"
+    "CL_CF_CM_search_history": "搜尋紀錄",
+    "CL_DV_OV_24_egg_timer_pop_content": "選擇煮蛋計時器到期時聽到的聲音的重複次數和持續時間。 \n\n煮蛋計時器的聲音清晰可聞…",
+    "CL_DV_OV_24_finish_sound_pop_content": "選擇烹飪程序完成時重複完成聲音的時間間隔。 \n\n結束的聲音聽得見...",
+    "CL_DV_OV_24_night_mode_pop_content": "選擇夜間模式何時啟動。",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "選擇安息日模式何時開始。",
+    "input_email_address": "輸入電子郵件地址",
+    "CL_DV_OV_24_cavity_lights": "腔體燈",
+    "CL_DV_OV_24_sabbath_reminder": "安息日提醒",
+    "CL_DV_OV_24_start_sabbath": "開始安息日",
+    "CL_DV_OV_24_end_sabbath": "安息日結束",
+    "CL_DV_OV_24_show_backgrounds": "顯示背景",
+    "CL_DV_OV_24_brightness_setting_content": "烤箱顯示器和按鍵的亮度可以根據您的喜好進行更改。 ",
+    "CL_DV_OV_24_close_user_detected": "偵測到關閉用戶"
 }
