--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4132,5 +4132,17 @@
     "CL_DV_OV_24_finish_sounds": "完成声音",
     "CL_DV_OV_24_finish_sounds_content": "选择完成声音重复的间隔。",
     "CL_DV_OV_search_recipes": "搜索菜谱",
-    "CL_CF_CM_search_history": "搜索历史"
+    "CL_CF_CM_search_history": "搜索历史",
+    "CL_DV_OV_24_egg_timer_pop_content": "选择鸡蛋计时器到期时发出的声音的重复次数和持续时间。 \n\n鸡蛋计时器的声音可以听见……",
+    "CL_DV_OV_24_finish_sound_pop_content": "选择烹饪程序完成时完成声音重复的间隔。 \n\n可以听到结束的声音...",
+    "CL_DV_OV_24_night_mode_pop_content": "选择夜间模式的启动时间。",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "选择安息日模式的开始时间。",
+    "input_email_address": "输入电子邮件地址",
+    "CL_DV_OV_24_cavity_lights": "腔体灯",
+    "CL_DV_OV_24_sabbath_reminder": "安息日提醒",
+    "CL_DV_OV_24_start_sabbath": "开始安息日",
+    "CL_DV_OV_24_end_sabbath": "安息日结束",
+    "CL_DV_OV_24_show_backgrounds": "显示背景",
+    "CL_DV_OV_24_brightness_setting_content": "您可以根据自己的喜好更改烤箱显示屏和按键的亮度。 ",
+    "CL_DV_OV_24_close_user_detected": "检测到近距离用户"
 }
