--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4144,5 +4144,6 @@
     "CL_DV_OV_24_end_sabbath": "Konec sabatu",
     "CL_DV_OV_24_show_backgrounds": "Zobrazit pozadí",
     "CL_DV_OV_24_brightness_setting_content": "Jas displeje trouby a tlačítek lze změnit podle vašich preferencí. ",
-    "CL_DV_OV_24_close_user_detected": "Bylo zjištěno uzavření uživatele"
+    "CL_DV_OV_24_close_user_detected": "Bylo zjištěno uzavření uživatele",
+    "CL_CF_AS_firmware_update_upgrading": "Aktualizace..."
 }
