--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4144,5 +4144,6 @@
     "CL_DV_OV_24_end_sabbath": "Slut sabbatten",
     "CL_DV_OV_24_show_backgrounds": "Vis baggrunde",
     "CL_DV_OV_24_brightness_setting_content": "Lysstyrken på ovnens display og tasterne kan ændres efter dine ønsker. ",
-    "CL_DV_OV_24_close_user_detected": "Tæt bruger fundet"
+    "CL_DV_OV_24_close_user_detected": "Tæt bruger fundet",
+    "CL_CF_AS_firmware_update_upgrading": "Opdaterer..."
 }
