--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4144,5 +4144,6 @@
     "CL_DV_OV_24_end_sabbath": "Конец субботы",
     "CL_DV_OV_24_show_backgrounds": "Показать фоны",
     "CL_DV_OV_24_brightness_setting_content": "Яркость дисплея и кнопок духовки можно изменить по вашему желанию. ",
-    "CL_DV_OV_24_close_user_detected": "Обнаружен близкий пользователь"
+    "CL_DV_OV_24_close_user_detected": "Обнаружен близкий пользователь",
+    "CL_CF_AS_firmware_update_upgrading": "Обновление..."
 }
