--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4144,5 +4144,6 @@
     "CL_DV_OV_24_end_sabbath": "Кінець шабашу",
     "CL_DV_OV_24_show_backgrounds": "Показати фони",
     "CL_DV_OV_24_brightness_setting_content": "Яскравість дисплея та кнопок духовки можна змінити на свій смак. ",
-    "CL_DV_OV_24_close_user_detected": "Закрити користувача виявлено"
+    "CL_DV_OV_24_close_user_detected": "Закрити користувача виявлено",
+    "CL_CF_AS_firmware_update_upgrading": "Оновлення..."
 }
