--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4144,5 +4144,6 @@
     "CL_DV_OV_24_end_sabbath": "Τέλος Σαββάτου",
     "CL_DV_OV_24_show_backgrounds": "Εμφάνιση φόντου",
     "CL_DV_OV_24_brightness_setting_content": "Η φωτεινότητα της οθόνης του φούρνου και των πλήκτρων μπορεί να αλλάξει ανάλογα με τις προτιμήσεις σας. ",
-    "CL_DV_OV_24_close_user_detected": "Εντοπίστηκε στενός χρήστης"
+    "CL_DV_OV_24_close_user_detected": "Εντοπίστηκε στενός χρήστης",
+    "CL_CF_AS_firmware_update_upgrading": "Ενημέρωση..."
 }
