--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4144,5 +4144,6 @@
     "CL_DV_OV_24_end_sabbath": "安息日の終わり",
     "CL_DV_OV_24_show_backgrounds": "背景を表示",
     "CL_DV_OV_24_brightness_setting_content": "オーブンのディスプレイとキーの明るさはお好みに合わせて変更できます。 ",
-    "CL_DV_OV_24_close_user_detected": "クローズユーザーが検出されました"
+    "CL_DV_OV_24_close_user_detected": "クローズユーザーが検出されました",
+    "CL_CF_AS_firmware_update_upgrading": "更新中..."
 }
