--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4144,5 +4144,6 @@
     "CL_DV_OV_24_end_sabbath": "Крај на сабота",
     "CL_DV_OV_24_show_backgrounds": "Прикажи позадини",
     "CL_DV_OV_24_brightness_setting_content": "Осветленоста на екранот и копчињата на рерната може да се сменат по ваша желба. ",
-    "CL_DV_OV_24_close_user_detected": "Откриен е близок корисник"
+    "CL_DV_OV_24_close_user_detected": "Откриен е близок корисник",
+    "CL_CF_AS_firmware_update_upgrading": "Се ажурира..."
 }
