--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4144,5 +4144,7 @@
     "CL_DV_OV_24_end_sabbath": "Încheiați Sabatul",
     "CL_DV_OV_24_show_backgrounds": "Afișați fundaluri",
     "CL_DV_OV_24_brightness_setting_content": "Luminozitatea afișajului cuptorului și a tastelor pot fi modificate după preferințele dvs. ",
-    "CL_DV_OV_24_close_user_detected": "A fost detectat un utilizator apropiat"
+    "CL_DV_OV_24_close_user_detected": "A fost detectat un utilizator apropiat",
+    "CL_CF_AS_firmware_update_upgrading": "Se actualizează...",
+    "CL_DV_HOB_refresh_mode": "Modul de reîmprospătare"
 }
