--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4144,5 +4144,7 @@
     "CL_DV_OV_24_end_sabbath": "Avsluta sabbaten",
     "CL_DV_OV_24_show_backgrounds": "Visa bakgrunder",
     "CL_DV_OV_24_brightness_setting_content": "Ljusstyrkan på ugnsdisplayen och knapparna kan ändras efter dina önskemål. ",
-    "CL_DV_OV_24_close_user_detected": "Nära användare upptäcktes"
+    "CL_DV_OV_24_close_user_detected": "Nära användare upptäcktes",
+    "CL_CF_AS_firmware_update_upgrading": "Uppdaterar...",
+    "CL_DV_HOB_refresh_mode": "Uppdateringsläge"
 }
