--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4144,5 +4144,7 @@
     "CL_DV_OV_24_end_sabbath": "پایان سبت",
     "CL_DV_OV_24_show_backgrounds": "نمایش پس زمینه ها",
     "CL_DV_OV_24_brightness_setting_content": "روشنایی نمایشگر فر و کلیدها را می توان به دلخواه تغییر داد. ",
-    "CL_DV_OV_24_close_user_detected": "کاربر نزدیک شناسایی شد"
+    "CL_DV_OV_24_close_user_detected": "کاربر نزدیک شناسایی شد",
+    "CL_CF_AS_firmware_update_upgrading": "به روز رسانی ...",
+    "CL_DV_HOB_refresh_mode": "حالت تازه کردن"
 }
