--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4144,5 +4144,7 @@
     "CL_DV_OV_24_end_sabbath": "Демалыс күнін аяқтаңыз",
     "CL_DV_OV_24_show_backgrounds": "Фондарды көрсету",
     "CL_DV_OV_24_brightness_setting_content": "Тұмшапеш дисплейі мен пернелердің жарықтығын қалауыңыз бойынша өзгертуге болады. ",
-    "CL_DV_OV_24_close_user_detected": "Жабылатын пайдаланушы анықталды"
+    "CL_DV_OV_24_close_user_detected": "Жабылатын пайдаланушы анықталды",
+    "CL_CF_AS_firmware_update_upgrading": "Жаңарту...",
+    "CL_DV_HOB_refresh_mode": "Жаңарту режимі"
 }
