--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4144,5 +4144,7 @@
     "CL_DV_OV_24_end_sabbath": "Avslutt sabbaten",
     "CL_DV_OV_24_show_backgrounds": "Vis bakgrunner",
     "CL_DV_OV_24_brightness_setting_content": "Lysstyrken på ovnsdisplayet og tastene kan endres etter dine preferanser. ",
-    "CL_DV_OV_24_close_user_detected": "Nær bruker oppdaget"
+    "CL_DV_OV_24_close_user_detected": "Nær bruker oppdaget",
+    "CL_CF_AS_firmware_update_upgrading": "Oppdaterer ...",
+    "CL_DV_HOB_refresh_mode": "Oppdateringsmodus"
 }
