--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4144,5 +4144,7 @@
     "CL_DV_OV_24_end_sabbath": "Крај суботе",
     "CL_DV_OV_24_show_backgrounds": "Прикажи позадине",
     "CL_DV_OV_24_brightness_setting_content": "Осветљеност екрана и тастера рерне може се променити по жељи. ",
-    "CL_DV_OV_24_close_user_detected": "Откривено је затварање корисника"
+    "CL_DV_OV_24_close_user_detected": "Откривено је затварање корисника",
+    "CL_CF_AS_firmware_update_upgrading": "Ажурирање...",
+    "CL_DV_HOB_refresh_mode": "Режим освежавања"
 }
