--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4144,5 +4144,7 @@
     "CL_DV_OV_24_end_sabbath": "Şabatın sonu",
     "CL_DV_OV_24_show_backgrounds": "Arkaplanları göster",
     "CL_DV_OV_24_brightness_setting_content": "Fırın ekranının ve tuşlarının parlaklığını isteğinize göre değiştirebilirsiniz. ",
-    "CL_DV_OV_24_close_user_detected": "Yakın kullanıcı algılandı"
+    "CL_DV_OV_24_close_user_detected": "Yakın kullanıcı algılandı",
+    "CL_CF_AS_firmware_update_upgrading": "Güncelleniyor...",
+    "CL_DV_HOB_refresh_mode": "Yenileme modu"
 }
